fix the side note to make it fit in the boc when text is too long

--- a/assignment2/stylesheet/style.css
+++ b/assignment2/stylesheet/style.css
@@ -37,6 +37,7 @@ main
     position: relative;
     margin: 0.5em 0;
     padding-left:1rem;
+    flex: 0 0 auto;
 }
 
 div.new_note
@@ -81,7 +82,6 @@ div.new_note
 .hidden
 {
     visibility: hidden;
-    
 }
 
 .contain
